--- a/frontend/styles/utils.module.scss
+++ b/frontend/styles/utils.module.scss
@@ -1,7 +1,7 @@
 .body {
     padding-top: 80px;
 }
-.boxparent {
+.boxParent {
     width: 100%;
     height: auto;
     display: flex;
@@ -9,4 +9,76 @@
     justify-content: space-between;
     row-gap: 2rem;
     margin-bottom: 2rem;
+}
+.boxParent:after {
+    display: block;
+    content:"";
+    width: calc(100%/3 - 1rem);/* 横幅を3等分 */
+}
+.prdDetailArea {
+    display: flex;
+    width: auto;
+    justify-content: space-around;
+    background-color: #fff;
+    height: auto;
+    margin: 1.5vw;
+    padding: 3vw;
+}
+.leftArea {
+    width: 50%;
+}
+.leftArea img {
+    width: 100%;
+}
+.rightArea {
+    width: 50%;
+    padding-left: 5vw;
+    color: #707070;
+    font-size: 1.2vw;
+    font-weight: 600;
+    line-height: 3vw;
+}
+.prdName {
+    font-size: 2vw;
+    padding: 1vw 0;
+}
+.prdTxt span,
+.prdSize span {
+    color: #959595;
+}
+.prdTxt span {
+    padding-right: 1.5vw;
+}
+.prdSize span{
+    padding-right: 4.4vw;
+}
+.prdSubmit {
+    // margin-top: auto;
+    position: absolute;
+    // bottom: 22rem;
+	display: block;
+	// width: 100px;
+}
+.prdQty {
+    display: flex;
+    font-size: 1.4vw;
+    font-weight: 400;
+    box-sizing: border-box;
+    padding-bottom: 1vw;
+    margin-top: 8vw;
+}
+.prdQty input[type="number"] {
+    font-size: 1.2vw;
+    color: #707070;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    box-sizing: border-box;
+    width: 5vw;
+    margin-left: 1vw;
+    padding-left: 1.5vw;
+}
+.prdPrice {
+    padding-bottom: 2vw;
+    font-size: 3vw;
+    font-weight: 400;
 }
