--- a/frontend/components/Button/Button.module.scss
+++ b/frontend/components/Button/Button.module.scss
@@ -1,85 +1,48 @@
-.buttonArea {
-  display: block;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.arrow {
+  display: inline-block;
+  width: 30%;
+  justify-content: center;
   text-align: center;
-}
-.button {
-  width: 30vw;
+  vertical-align: middle;
+  text-decoration: none;
+  background-color: orange;
+  color: white;
+  font-size: 1.4rem;
+  font-weight: bold;
+  letter-spacing: 0.3rem;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   transition: all 0.3s;
-}
-.button:hover {
-  transform: translate(1px, 1px);
-}
+  position: relative;
 
-// .button {
-//   font-size: 1.5rem;
-//   display: block;
-//   color: #fff;
-//   text-align: center;
-//   background-color: #FF7757;
-//   width: 30%;
-//   margin: -0.8rem auto 1rem;
-//   padding: 0.5rem 1rem;
-//   border-radius: 5px;
-//   box-shadow: 0 5px 10px -5px rgba(0,0,0,0.5);
-//   transition: all 0.3s;
-//   // justify-content: center;
-// }
-// .button:hover {
-//   transform: translate(1px, 1px);
-//   box-shadow: none;
-// }
-// .buttonBox {
-//   display: block;
-//   text-align: center;
-//   font-size: 2rem;
-// }
-// .arrow_btn{ 
-//   text-align: center;
-//   position: relative;
-//   display: inline-block;
-//   padding: 0 0 0 16px;
-//   color: #fff;
-//   vertical-align: middle;
-//   text-decoration: none;
-//   font-size: 15px;
-//   background:#FF7757;
-//   padding: 1rem 6rem;
-// } 
-// .arrow_btn::before,
-// .arrow_btn::after {
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   margin: auto;
-//   content: "";
-//   vertical-align: middle;
-// }
+  &:hover {
+    background-color: #ffc864;
+    transform: translate(1px, 1px);
+  }
 
-// .arrow_03::before{
-//   width: 13px;
-//   height: 13px;
-//   -webkit-border-radius: 50%;
-//   border-radius: 50%;
-//   background: #fff;
-// }
-// /* テキストリンク */
-// .arrow_03::after{
-//   left: 3px;
-//   width: 4px;
-//   height: 4px;
-//   border-top: 1px solid #FF7757;
-//   border-right: 1px solid #FF7757;
-//   -webkit-transform: rotate(45deg);
-//   transform: rotate(45deg);
-// }
-// /* ボタン */
-// .arrow_btn.arrow_03::after{
-//   left: 20px;
-//   width: 4px;
-//   height: 4px;
-//   border-top: 1px solid #fff;
-//   border-right: 1px solid #fff;
-//   -webkit-transform: rotate(45deg);
-//   transform: rotate(45deg);
-// }
+}
+.arrow::after{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 25px;
+  margin: auto;
+  content: "";
+  vertical-align: middle;
+  width: 0.4em;   /* arrow size */
+  height: 0.4em;  /* arrow size */
+  border-top: 3px solid #fff;  /* thickness, color */
+  border-right: 3px solid #fff;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
