--- a/frontend/components/Layout/Header.module.scss
+++ b/frontend/components/Layout/Header.module.scss
@@ -40,6 +40,13 @@
 .iconCart img {
     width: 35%;
 }
+
+.button {
+    background-color: #fff;
+    border: #fff;
+    cursor: pointer;
+}
+
 // 商品検索フォーム
 .searchForm {
     display: flex;
