--- a/frontend/components/Purchase/Cart.module.scss
+++ b/frontend/components/Purchase/Cart.module.scss
@@ -29,7 +29,7 @@
     padding: 1rem 0;
 }
 .table tr {
-    border-bottom: 1px solid #BFBFBF;
+    border-bottom: 1px solid #eae7e7;
 }
 .prdImg {
     width: 20%;
@@ -58,9 +58,15 @@
         width: 3vw;
         height: 3vw;
         text-align: center;
-        border: 1px solid #fff;
+        border: none;
         border-radius: 50%;
         cursor: pointer;
+        box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+        transition: .3s;
+    }
+    button:hover {
+        transform: translateY(5px);
+        box-shadow: 0 2px 2px 0 rgba(0,0,0,0.1);
     }
 }
 .totalAmount {
@@ -70,5 +76,21 @@
     span {
         font-size: 2rem;
         padding-left: 2rem;
+    }
+}
+.deleteBtn {
+    button {
+        width: 5vw;
+        height: 3vw;
+        text-align: center;
+        border: none;
+        border-radius: 10%;
+        cursor: pointer;
+        box-shadow: 0 5px 5px 0 rgba(0,0,0,0.1);
+        transition: .3s;
+    }
+    :hover {
+        transform: translateY(5px);
+        box-shadow: 0 2px 2px 0 rgba(0,0,0,0.1);
     }
 }
