購入確定ボタン後の処理／cart/購入履歴テーブルのスキーマ変更

--- a/frontend/styles/utils.module.scss
+++ b/frontend/styles/utils.module.scss
@@ -95,3 +95,25 @@
     font-size: 3vw;
     font-weight: 400;
 }
+.thanksBox {
+    width: auto;
+    // justify-content: space-around;
+    text-align: center;
+    background-color: #fff;
+    border: #2c372971 solid 1px;
+    height: auto;
+    margin: 1.5vw;
+    padding: 3vw;
+}
+.thanksPageImg {
+    width: 40%;
+}
+.thanksMsg {
+    font-size: 1.6rem;
+    color: #6B8264;
+    margin-top: 1rem;
+}
+.thanksSubMsg {
+    color: #707070;
+    margin: -0.2rem 0 2rem;
+}
