TOPページFVの背景に画像を設定

--- a/frontend/components/Slider.module.scss
+++ b/frontend/components/Slider.module.scss
@@ -3,6 +3,8 @@
     height: 600px;
     line-height: 600px;
     padding-top: 40px;
+    background-image: url(../public/topFvBack.png);
+    background-size:  cover;
 }
 .slideAreaBox {
     width: 1040px;
