--- a/frontend/components/Button/Button.module.scss
+++ b/frontend/components/Button/Button.module.scss
@@ -1,37 +1,48 @@
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
-.arrow {
-  display: inline-block;
+.buttonClassName {
+  display: block;
   width: 40%;
-  justify-content: center;
-  text-align: center;
-  vertical-align: middle;
-  text-decoration: none;
-  background-color: orange;
-  color: white;
+  margin: 0 auto;
+  padding: 10px 20px;
+  background-color: #ffffffab;
+  color: #FF7757;
   font-size: 1.4rem;
   font-weight: bold;
   letter-spacing: 0.3rem;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
   cursor: pointer;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-  transition: all 0.3s;
+  border: 3px solid #ff7657ce;
+  border-radius: 5px;
   position: relative;
-
+  z-index: 1;
+  transition: .3s;
   &:hover {
-    background-color: #ffc864;
-    transform: translate(1px, 1px);
+    // transform: translate(1px, 1px); /* 右下に移動 */
+    color: #fff;
   }
-
+  &:hover::before {
+    transform-origin: 0% 50%;
+    transform: scaleX(1);
+  }
 }
-.arrow::after{
+.buttonClassName::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #ff7657ce;
+  border-radius: 1px;
+  transform-origin: 100% 50%;
+  transform: scaleX(0);
+  transition: transform ease .3s;
+}
+
+/* 右矢印 */
+.buttonClassName::after{
   position: absolute;
   top: 0;
   bottom: 0;
@@ -39,10 +50,113 @@
   margin: auto;
   content: "";
   vertical-align: middle;
-  width: 0.4em;   /* arrow size */
-  height: 0.4em;  /* arrow size */
-  border-top: 3px solid #fff;  /* thickness, color */
-  border-right: 3px solid #fff;
+  width: 0.4em;   /* 矢印のサイズ */
+  height: 0.4em;  /* 矢印のサイズ */
+  border-top: 3px solid #ff603c;    /* 矢印の色 */
+  border-right: 3px solid #ff603c;  /* 矢印の色 */
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/* variantプロパティ：back */
+.variantBack {
+  display: block;
+  width: 40%;
+  margin: 2rem auto 0;
+  padding: 10px 20px;
+  background-color: #BFBFBF;
+  color: #fff;
+  font-size: 1.4rem;
+  font-weight: bold;
+  letter-spacing: 0.3rem;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  border: none;
+  border-radius: 5px;
+  position: relative;
+  z-index: 1;
+  transition: .3s;
+
+  &:hover {
+    transform: translate(1px, 1px); /* 右下に移動 */
+    color: #fff;
+  }
+}
+/* 右矢印 */
+.variantBack::before{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 25px;
+  margin: auto;
+  content: "";
+  vertical-align: middle;
+  width: 0.4em;   /* 矢印のサイズ */
+  height: 0.4em;  /* 矢印のサイズ */
+  border-top: 3px solid #fff;    /* 矢印の色 */
+  border-right: 3px solid #fff;  /* 矢印の色 */
+  -webkit-transform: rotate(225deg);
+  transform: rotate(225deg);
+}
+
+/* variantプロパティ：halfButton */
+.variantHalfButton {
+  display: block;
+  width: 30%;
+  margin: 0;
+  padding: 10px 20px;
+  background-color: #ffffffab;
+  color: #FF7757;
+  font-size: 1.4rem;
+  font-weight: bold;
+  letter-spacing: 0.3rem;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  border: 3px solid #ff7657ce;
+  border-radius: 5px;
+  position: absolute;
+  z-index: 1;
+  transition: .3s;
+  &:hover {
+    color: #fff;
+  }
+  &:hover::before {
+    transform-origin: 0% 50%;
+    transform: scaleX(1);
+  }
+}
+.variantHalfButton::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #ff7657ce;
+  border-radius: 1px;
+  transform-origin: 100% 50%;
+  transform: scaleX(0);
+  transition: transform ease .3s;
+}
+
+/* 右矢印 */
+.variantHalfButton::after{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 25px;
+  margin: auto;
+  content: "";
+  vertical-align: middle;
+  width: 0.4em;   /* 矢印のサイズ */
+  height: 0.4em;  /* 矢印のサイズ */
+  border-top: 3px solid #ff603c;    /* 矢印の色 */
+  border-right: 3px solid #ff603c;  /* 矢印の色 */
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
