--- a/frontend/components/Form/RegisterForm.module.scss
+++ b/frontend/components/Form/RegisterForm.module.scss
@@ -1,11 +1,11 @@
 .form {
     display: block;
     width: auto;
-    margin: 3vw;
-    padding: 5vw;
+    margin: 0 3vw;
+    padding: 2vw 5vw;
     background-color: #ffffff7a;
     border: 1px solid #6B8264;
-    font-size: 1.5vw;
+    font-size: 1.2rem;
     font-weight: bold;
     color: #707070;
 }
@@ -13,6 +13,9 @@
     display: flex;
     padding: 1.0vw 1.6vw;
     align-items: center;
+}
+.section:last-of-type {
+    padding: 1.0vw 1.6vw 3.0vw;
 }
 .title {
     width: 40%;
