--- a/frontend/components/Layout/Title.module.scss
+++ b/frontend/components/Layout/Title.module.scss
@@ -1,14 +1,15 @@
 .titleBox {
     background-color: #D4DDA6;
-    margin: 1rem;
+    margin: 1rem 1rem 0;
 }
 .contentTitle {
     color: #6B8264;
     font-family: Hiragino Kaku Gothic ProN, Hiragino Sans, YuGothic, sans-serif;
+    font-size: 1.5rem;
     line-height: 1rem;
     letter-spacing: 0.1rem;
     position: relative;
-    padding: 0.4rem 1rem 0.2rem 3rem;
+    padding: 0.8rem 1rem 0.2rem 3rem;
     background-image: repeating-linear-gradient(45deg, #F5F5F5 0px 2px, transparent 2px, transparent 6px);
     background-repeat: no-repeat;
     background-size: 2rem;
