--- a/frontend/components/Purchase/Cart.module.scss
+++ b/frontend/components/Purchase/Cart.module.scss
@@ -2,13 +2,12 @@
     background-color: #fefefe;
     margin: 2rem;
     font-size: 1.3vw;
+    padding-bottom: 2rem;
 }
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    // width: 100vw;
-    // height: 100vw;
     box-sizing: border-box;
     padding: 0 1rem;
 }
@@ -16,14 +15,8 @@
     width: 100%;
     text-align: center;
     border-collapse: collapse;
-    // border-spacing: 0;
     color: #353535;
-    // border-spacing: 1rem;
 }
-.table thead {
-    
-}
-
 .table th,
 .table td {
     padding: 1rem 0;
@@ -71,7 +64,7 @@
 }
 .totalAmount {
     text-align: right;
-    margin: 1rem 3rem 1rem 0;
+    margin: 1rem 3rem 2rem 0;
 
     span {
         font-size: 2rem;
