--- a/frontend/components/Purchase/Confirm.module.scss
+++ b/frontend/components/Purchase/Confirm.module.scss
@@ -1,4 +1,7 @@
-.body {
+.confirmBody {
+    padding-bottom: 2rem;
+}
+.inner {
     background-color: #fefefe;
     margin: 2rem;
     padding: 0 0 1rem;
@@ -8,8 +11,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    // width: 100vw;
-    // height: 100vw;
     box-sizing: border-box;
     padding: 0 1rem;
     p {
@@ -20,14 +21,8 @@
     width: 100%;
     text-align: center;
     border-collapse: collapse;
-    // border-spacing: 0;
     color: #353535;
-    // border-spacing: 1rem;
 }
-.table thead {
-    
-}
-
 .table th,
 .table td {
     padding: 1rem 0;
