--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -11,7 +11,6 @@
   align-items: center;
 }
 
-
 .categoryArea {
   background-color: #D4DDA6;
   display: flex;
@@ -63,10 +62,9 @@
 .ctaTxt {
   color: #fff;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: 500;
   letter-spacing: 0.2rem;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.25);
-}
-.ctaTxt strong {
-  font-size: 1.2rem;
+  margin: 1rem 0 0.2rem;
 }
