--- a/frontend/styles/utils.module.scss
+++ b/frontend/styles/utils.module.scss
@@ -116,3 +116,34 @@
     color: #707070;
     margin: -0.2rem 0 2rem;
 }
+
+/* エラーダイアログ */
+.errorBox {
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #e74c3ce8;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 5px 10px -5px rgba(0,0,0,0.5);
+}
+.errorText {
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 600;
+}
+.okButton {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #fff;
+    color: #E74C3C;
+    font-weight: 600;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.okButton:hover {
+    opacity: 0.8;
+}
