--- a/frontend/components/Button/Button.module.scss
+++ b/frontend/components/Button/Button.module.scss
@@ -158,3 +158,61 @@
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
+/* variantプロパティ：halfBtnLongTxt */
+.variantHalfBtnLongTxt {
+  display: block;
+  width: 30%;
+  margin: 0;
+  padding: 10px 20px 10px 0;
+  background-color: #ffffffab;
+  color: #FF7757;
+  font-size: 1.4rem;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  border: 3px solid #ff7657ce;
+  border-radius: 5px;
+  position: absolute;
+  z-index: 1;
+  transition: .3s;
+  &:hover {
+    color: #fff;
+  }
+  &:hover::before {
+    transform-origin: 0% 50%;
+    transform: scaleX(1);
+  }
+}
+.variantHalfBtnLongTxt::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #ff7657ce;
+  border-radius: 1px;
+  transform-origin: 100% 50%;
+  transform: scaleX(0);
+  transition: transform ease .3s;
+}
+/* 右矢印 */
+.variantHalfBtnLongTxt::after{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 25px;
+  margin: auto;
+  content: "";
+  vertical-align: middle;
+  width: 0.4em;   /* 矢印のサイズ */
+  height: 0.4em;  /* 矢印のサイズ */
+  border-top: 3px solid #ff603c;    /* 矢印の色 */
+  border-right: 3px solid #ff603c;  /* 矢印の色 */
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
