--- a/frontend/styles/utils.module.scss
+++ b/frontend/styles/utils.module.scss
@@ -46,6 +46,9 @@
 .prdSize span {
     color: #959595;
 }
+.prdSize {
+    margin: 0 0 7vw;
+}
 .prdTxt span {
     padding-right: 1.5vw;
 }
@@ -56,7 +59,6 @@
     display: flex;
     font-size: 1.4vw;
     font-weight: 500;
-    margin: 7vw 0 0;
     span {
         padding-right: 2vw;
     }
