【デザイン修正】エラーメッセージ

--- a/frontend/styles/utils.module.scss
+++ b/frontend/styles/utils.module.scss
@@ -120,6 +120,18 @@
 }
 
 /* エラーダイアログ */
+.errorContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 11111;
+}
 .errorBox {
     position: fixed;
     top: 40%;
