【処理修正】会員登録後、自動ログインする

--- a/frontend/components/Form/ThanksPage.module.scss
+++ b/frontend/components/Form/ThanksPage.module.scss
@@ -11,5 +11,9 @@
     text-align: center;
 }
 .text {
+    margin-bottom: 0.5rem;
+}
+.autoReloadTop {
+    font-size: 1.4vw;
     margin-bottom: 2rem;
 }
